--- a/www/css/style.css
+++ b/www/css/style.css
@@ -877,3 +877,8 @@ margin: 0;
     margin-top: 20px;
     border: 2px solid #2e7cb0;
 }
+.modal-header{
+    font-size: 2.28rem;
+    line-height: 110%;
+    margin: 1.14rem 0 .912rem 0;
+}
