--- a/www/css/style.css
+++ b/www/css/style.css
@@ -882,3 +882,30 @@ margin: 0;
     line-height: 110%;
     margin: 1.14rem 0 .912rem 0;
 }
+.realty-header{
+    border-bottom: 1px solid gray;
+}
+.realty-info h2{
+    font-size: 1.8rem;
+}
+.realty-info h3{
+    font-size: 1.6rem;
+}
+.realty-info h4{
+    font-size: 1.4rem;
+}
+.realty-info p{
+    font-size: 1.2rem;
+    margin: 0 0 5px 0;
+}
+.realty p{
+    font-size: 1.4rem;
+    margin: 0 0 5px 0;
+}
+.realty h2{
+    font-size: 1.8rem;
+}
+.catalog-item h2{
+    font-size: 1.2rem;
+    margin: 0 0 5px 0;
+}
